# screenshot-ocr

./: AGENTS.md  Cargo.toml  README.md
src/: clipboard.rs  config.rs  main.rs  notifier.rs
src/provider/: glm.rs  mod.rs
